/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2014-11-05
Bug fix : write_XYZ(), write_GridData(), write_DataRecord(), read_DataRecord()
 - comment out 'ngrid', multi-grid format was incorrectly implemented
 - if there is no target directory, an XYZ file can not be written. Added MakeDirectory(dir).

------------------
2014-11-03
Bug fix DFI_Finfo.GuideCell
 - (DFI_Finfo.GuideCell>1) >>  (DFI_Finfo.GuideCell>0)

------------------
2014-11-02
Accept pull request from develop_plot3d

------------------
2014-10-31
Add API method WriteGridFile to output grid file and delete API method set_OutputGrid
PLOT3D形式やAVS形式において、座標ファイルを出力するための
APIメソッドWriteGridFileを作成した。
DFIの出力インスタンスからこのメソッドを呼べば、メソッドWriteDataを
介することなく座標ファイルが出力される。
また、前リビジョンで作成したAPIメソッドset_OutputGridは削除し、
DFIクラスのメンバ変数m_OutputGridも削除した。
さらに、PLOT3D形式のxyzファイルにiblankを含める場合は、
メソッドWriteGridFileの引数からiblankのポインタを与えるようにした。
デフォルトはiblank=NULLに設定。
これまでiblankのポインタはメソッドWriteInitの引数より与えるように
していたが、それは廃止した。
Domainクラスからもメンバ変数iblankを削除し、iblankのポインタはメソッド
WriteGridFileからメソッドwrite_XYZまで引数経由で渡すようにした。

------------------
2014-10-31
Add API method set_OutputGrid to set whether to output grid file
PLOT3D形式やAVS形式において、座標ファイルを出力するかどうか
制御できるように、APIメソッドset_OutputGridを追加した。
また、PLOT3D形式において、メソッドWriteDataでxyzファイルを出力
したら、DomainクラスのポインタiblankをNULLに設定するようにした。
(xyzファイルを出力後、ソルバー側でiblankをデアロケートしてもライブラリ側
に問題が生じないようにするため。)

------------------
2014-10-25
- add cdm_VisIt.h/C
- VisIt用のオプションを追加 /VisIt/PlotGuideCell = "on" / "off"

------------------
2014-10-24
- plot3d check
- #define D_CDM_EXT_FUNC "func" >> "fun" // 拡張子は"fun", FileFormat識別子は"plot3d"

------------------
2014-10-22
Add check of number of variables for SPH format
SPH形式のファイルを入出力する際、変数の個数が１か３以外の場合に
エラーとなるように設定した。

------------------
2014-10-22
Replace Component with NumVariables and edit codes following this replacement